--- a/packages/ecosystem/package.json
+++ b/packages/ecosystem/package.json
@@ -15,7 +15,7 @@
     "deploy:ropsten": "yarn graph deploy mStable/mStable-ecosystem-ropsten --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
     "deploy:kovan": "yarn graph deploy mStable/mStable-ecosystem-kovan --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
     "deploy:staging": "yarn graph deploy mStable/mStable-ecosystem-staging --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
-    "deploy:mainnet": "yarn graph deploy mStable/mStable-ecosystem --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token ",
+    "deploy:mainnet": "yarn graph deploy --studio mstable-ecosystem --debug --access-token ",
     "lint": "yarn run prettier './src/**/*.{ts,tsx}' --write"
   },
   "dependencies": {
